objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>District_External_ID_Creator__c</fullName>
        <formula>IF( (NOT(CONTAINS(Internal_Local_ID__c, &quot;Invalid&quot;))),

Substitute(IF(LEN(Local_Student_ID__c) &lt; 10, LPAD(TEXT(LEN(Local_Student_ID__c)),2,&quot;0&quot;),

IF(AND(LEN(Local_Student_ID__c) &gt;=10,LEN(Local_Student_ID__c) &lt; 100), TEXT(LEN(Local_Student_ID__c)), &quot;00&quot;)) &amp;

LEFT( Internal_Local_ID__c , 10) &amp; School__r.District_School_ID__c &amp; Right( Internal_Local_ID__c , 10),&quot; &quot;, &quot;&quot;),

(IF(CONTAINS(Internal_Local_ID__c,&quot;Invalid - Local Student ID Less Than 5 characters&quot;), &quot;Invalid - Local Student ID Less Than 5 characters&quot;,

IF(CONTAINS(Internal_Local_ID__c,&quot;Invalid - Local Student ID contains spaces&quot;), &quot;Invalid - Local Student ID contains spaces&quot;,

IF(CONTAINS(Internal_Local_ID__c,&quot;Invalid - Local Student ID not available for this student&quot;), &quot;Invalid - Local Student ID not available for this student&quot;,

IF(CONTAINS(Internal_Local_ID__c,&quot;Invalid - Local Student ID contains scientific notation&quot;), &quot;Invalid - Local Student ID contains scientific notation&quot;,

&quot;Invalid - Unknown reason&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District External ID Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_External_ID_Creator_step_2__c</fullName>
        <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( District_External_ID_Creator__c ,&quot;0&quot;, &quot;+&quot;),&quot;1&quot;,&quot;!&quot; ),&quot;2&quot;,&quot;@&quot;),&quot;3&quot;,&quot;#&quot; ),&quot;4&quot;,&quot;$&quot;),&quot;5&quot;,&quot;%&quot; ),&quot;6&quot;,&quot;^&quot; ),&quot;7&quot;,&quot;&amp;&quot;), &quot;8&quot;,&quot;*&quot;),&quot;9&quot;,&quot;?&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District External ID Creator step 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_of_Columbia_C_Student_ID__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>District of Columbia Student ID*Retired*</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_1_Relationship_to_Student__c</fullName>
        <inlineHelpText>Displays the relationship to this student of the contact listed in the Emergency Contact #1 Name field.</inlineHelpText>
        <label>EContact  #1 Relationship to Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Need values here</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EContact_1_Cell_Phone__c</fullName>
        <inlineHelpText>Displays the cell phone number for the contact listed in the Emergency Contact #1 Name field.</inlineHelpText>
        <label>EContact #1 Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_1_Home_Phone__c</fullName>
        <inlineHelpText>Displays the home phone number for the contact listed in the Emergency Contact #1 Name field.</inlineHelpText>
        <label>EContact #1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_2_Cell_Phone__c</fullName>
        <inlineHelpText>Displays the cell phone number for the contact listed in the Emergency Contact #2 Name field.</inlineHelpText>
        <label>EContact #2 Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_2_Home_Phone__c</fullName>
        <inlineHelpText>Displays the home phone number for the contact listed in the Emergency Contact #2 Name field.</inlineHelpText>
        <label>EContact #2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_2_Work_Phone__c</fullName>
        <inlineHelpText>Displays the work phone number for the contact listed in the Emergency Contact #2 Name field.</inlineHelpText>
        <label>EContact #2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ELA_FL_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELA FL Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELA_Literacy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ELA/Literacy</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELL_Hours__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>ELL Hours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELL_Level__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>ELL Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>LEP</fullName>
                </value>
                <value>
                    <fullName>NEP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELL_Student_in_a_US_School_Less_Than_1_Y__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>ELL Student in US School less than 1 yr?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELL_Test_Date__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>ELL Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELL_Test__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>ELL Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access-1</fullName>
                </value>
                <value>
                    <fullName>Access-2</fullName>
                </value>
                <value>
                    <fullName>Access-3</fullName>
                </value>
                <value>
                    <fullName>Access-4</fullName>
                </value>
                <value>
                    <fullName>WAPT-1</fullName>
                </value>
                <value>
                    <fullName>WAPT-2</fullName>
                </value>
                <value>
                    <fullName>WAPT-3</fullName>
                </value>
                <value>
                    <fullName>WAPT-4</fullName>
                </value>
                <value>
                    <fullName>K-WAPT-LOW</fullName>
                </value>
                <value>
                    <fullName>K-WAPT-MID</fullName>
                </value>
                <value>
                    <fullName>K-WAPT-HIGH</fullName>
                </value>
                <value>
                    <fullName>PRE-IPT/PRE-LAS NES</fullName>
                </value>
                <value>
                    <fullName>PRE-IPT/PRE-LAS LES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student is an English language learner (ELL).</inlineHelpText>
        <label>ELL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economically_Disadvantaged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not a student is economically disadvantaged. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Economically Disadvantaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Econtact_2_Relationship_to_Student__c</fullName>
        <inlineHelpText>Displays the relationship to this student of the contact listed in the Emergency Contact #2 Name field.</inlineHelpText>
        <label>Econtact #2 Relationship to Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_For_Enrollment__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not the student is eligible for enrollment. This field is updated by the EOY Wizard and you can also update it manually.</inlineHelpText>
        <label>Eligible For Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Displays the student&apos;s email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Name__c</fullName>
        <inlineHelpText>Displays the full name for the contact listed in the Emergency Contact #1 Name field.</inlineHelpText>
        <label>EContact #1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Work_Phone__c</fullName>
        <inlineHelpText>Displays the work phone number for the contact listed in the Emergency Contact #1 Name field.</inlineHelpText>
        <label>EContact #1 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Name__c</fullName>
        <inlineHelpText>Displays the full name for the contact listed in the Emergency Contact #2 Name field.</inlineHelpText>
        <label>EContact #2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <inlineHelpText>Displays the student&apos;s first day of school in the current school year.</inlineHelpText>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <description>The process by which a student enters a school during a given academic session.</description>
        <inlineHelpText>Indicates the situation under which the student entered the school. If you update this field, SchoolForce updates the corresponding field on the Contact record.</inlineHelpText>
        <label>Entry Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer from a public school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transfer from a public school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a public school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, non-religiously-affiliated school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, non-religiously-affiliated school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, non-religiously-affiliated school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, religiously-affiliated school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, religiously-affiliated school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, religiously-affiliated school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a school outside of the country</fullName>
                </value>
                <value>
                    <fullName>Transfer from an institution</fullName>
                </value>
                <value>
                    <fullName>Transfer from a charter school</fullName>
                </value>
                <value>
                    <fullName>Transfer from home schooling</fullName>
                </value>
                <value>
                    <fullName>Re-entry from the same school with no interruption of schooling</fullName>
                </value>
                <value>
                    <fullName>Re-entry after a voluntary withdrawal</fullName>
                </value>
                <value>
                    <fullName>Re-entry after an involuntary withdrawal</fullName>
                </value>
                <value>
                    <fullName>Original entry into a United States school</fullName>
                </value>
                <value>
                    <fullName>Original entry into a United States school from a foreign country with no interruption in schooling</fullName>
                </value>
                <value>
                    <fullName>Original entry into a United States school from a foreign country with an interruption in schooling</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <inlineHelpText>Displays the student&apos;s ethnic background. You can use this field for reporting purposes.</inlineHelpText>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic / Latino</fullName>
                </value>
                <value>
                    <fullName>Non-Hispanic / Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evalauted_for_special_education__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Evalauted for special education*Retired*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluated_for_Special_Education_but_Not__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Evaluated for Special Ed but no Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluated_for_special_education__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Evaluated for special education*Retired*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <description>The month, day, and year on which an individual was evaluated.</description>
        <inlineHelpText>Displays the date this student was evaluated for special education.</inlineHelpText>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Type__c</fullName>
        <description>The location where a child&apos;s evaluation was Administered.</description>
        <inlineHelpText>Displays information about how a student&apos;s evaluation was administered.</inlineHelpText>
        <label>Evaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local education agency</fullName>
                </value>
                <value>
                    <fullName>Early intervention classroom/cente</fullName>
                </value>
                <value>
                    <fullName>Community facility</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Child care</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Outpatient hospital</fullName>
                </value>
                <value>
                    <fullName>Ambulatory care center</fullName>
                </value>
                <value>
                    <fullName>Primary care health provider office</fullName>
                </value>
                <value>
                    <fullName>Public health facility</fullName>
                </value>
                <value>
                    <fullName>Social service agency</fullName>
                </value>
                <value>
                    <fullName>Other health care provider location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exit_Comments__c</fullName>
        <inlineHelpText>Displays additional details about the student&apos;s exit/withdrawal from the school.</inlineHelpText>
        <label>Exit Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <inlineHelpText>Displays the date the student was withdrawn. SchoolForce updates this field when a student is withdrawn through the Section Wizard.</inlineHelpText>
        <label>Exit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <inlineHelpText>Displays the reason the student was withdrawn/exited from the school. SchoolForce updates this field when a student is withdrawn through the Section Wizard.</inlineHelpText>
        <label>Exit Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NI (No Information)</fullName>
                </value>
                <value>
                    <fullName>TSS (Transfer to Silings School)</fullName>
                </value>
                <value>
                    <fullName>DE (Dissatisfaction with Education)</fullName>
                </value>
                <value>
                    <fullName>DS (Dissatisfaction with Staff)</fullName>
                </value>
                <value>
                    <fullName>TSI (Transfer to Special Interest School)</fullName>
                </value>
                <value>
                    <fullName>DL (Dissatisfaction with Location)</fullName>
                </value>
                <value>
                    <fullName>TC (Transfer to Closer School)</fullName>
                </value>
                <value>
                    <fullName>DE (Death)</fullName>
                </value>
                <value>
                    <fullName>EX (Expulsion)</fullName>
                </value>
                <value>
                    <fullName>TO (Transfer Out Of State)</fullName>
                </value>
                <value>
                    <fullName>TS (Transfer in State)</fullName>
                </value>
                <value>
                    <fullName>TSS (Transfer to Siblings School)</fullName>
                </value>
                <value>
                    <fullName>Student is in a different public school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transferred to a public school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transferred to a public school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transferred to a private, non-religiously-affiliated school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transferred to a private, non-religiously-affiliated school in the same state</fullName>
                </value>
                <value>
                    <fullName>Transferred to a private, non-religiously-affiliated school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transferred to a private, religiously-affiliated school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transferred to a private, religiously-affiliated school in the same state</fullName>
                </value>
                <value>
                    <fullName>Transferred to a private, religiouslyaffiliated school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transferred to an institution</fullName>
                </value>
                <value>
                    <fullName>Transferred to home schooling</fullName>
                </value>
                <value>
                    <fullName>Matriculation to another school</fullName>
                </value>
                <value>
                    <fullName>Graduated with regular, advanced, International Baccalaureate, or other type of diploma</fullName>
                </value>
                <value>
                    <fullName>Completed school with other credentials</fullName>
                </value>
                <value>
                    <fullName>Died or is permanently incapacitated</fullName>
                </value>
                <value>
                    <fullName>Withdrawn due to illness</fullName>
                </value>
                <value>
                    <fullName>Expelled or involuntarily withdrawn</fullName>
                </value>
                <value>
                    <fullName>Reached maximum age for services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exit_Status__c</fullName>
        <description>An indication as to whether an instance of student exit/withdrawal is considered to be of a permanent or temporary nature.</description>
        <inlineHelpText>Displays the student&apos;s exit status. The values in this field are determined by your school. You can use this field for reporting purposes.</inlineHelpText>
        <label>Exit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent Exit/Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Temporary Exit/Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exit_Type__c</fullName>
        <inlineHelpText>Displays the student&apos;s exit type. The values in this field are determined by your school. You can use this field for reporting purposes.</inlineHelpText>
        <label>Exit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Expiration Date*Retired*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Evaluation_ID__c</fullName>
        <label>External Evaluation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Do not modify this field; it is used for internal purposes only.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FL_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FL Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_GPA_Value__c</fullName>
        <formula>IF 
(
OR (
Combined_Final_Grade_Values__c = 0,
Total_Credits_Earned__c = 0
),
NULL,
Combined_Final_Grade_Values__c /  Total_Credits_Earned__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the year-to-date unweighted GPA for all completed courses in a single school year. The value in this field displays on transcripts in the Final GPA field for each school year.</inlineHelpText>
        <label>Final GPA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Grade_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student is in the final grade level of a SchoolForce org. For example, you may check this box for an 8th grader if there is no high school in your org. This field is updated by the EOY Wizard and you can update it manually.</inlineHelpText>
        <label>Final Grade Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Grade_Overridden_Count__c</fullName>
        <label>Final_Grade Overridden Count</label>
        <summaryFilterItems>
            <field>Final_Grade__c.Grade_Overridden__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Final_Grade__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Reading_Level__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Final Reading Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Section_Grades_Overridden_Count__c</fullName>
        <label>Final Section Grades Overridden Count</label>
        <summaryFilterItems>
            <field>Final_Grade__c.Section_Grades_Overridden__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Final_Grade__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Weighted_GPA_Value__c</fullName>
        <formula>IF 
(
OR (
Combined_Weighted_Final_Grade_Values__c = 0,
Total_Credits_Earned__c = 0
),
NULL,
Combined_Weighted_Final_Grade_Values__c / Total_Credits_Earned__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the year-to-date weighted GPA for all completed courses in a single school year. The value in this field displays on report cards in the Weighted GPA field.</inlineHelpText>
        <label>Final Weighted GPA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the career-to-date Unweighted GPA, which includes the Final Unweighted GPA from every year the student has attended the school (including transferred courses). The value in this field also displays on transcripts in the Unweighted GPA field.</inlineHelpText>
        <label>GPA To Date</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <inlineHelpText>Displays the student&apos;s gender.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gifted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student has been evaluated as gifted. When mass printing report cards, you can use this field to narrow down your search results.</inlineHelpText>
        <label>Gifted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Name__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Grade Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Track__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Grade Track*Retired*</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>